Fix commit message text align
It did NOT look right when it inherited the centered text. This is just a fix for when the message was longer than the box and had to wrap.

--- a/folio-app/src/components/project_page/Commit.module.css
+++ b/folio-app/src/components/project_page/Commit.module.css
@@ -66,4 +66,5 @@
     font-style: italic;
     font-size: 0.9rem;
     color: gray;
+    text-align: start;
 }
